# Hockey_BI

./: .gitignore  LICENSE.md  Readme.md  deploy  package-lock.json  requirements.txt  start-api-server.sh
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/hmtracker/api/: admin_login.py  server.py
backend/hmtracker/database/: creation.py  repository.py
backend/hmtracker/loader/playerstats/: mapper.py
backend/hmtracker/loader/playerstats/source/: website.py
backend/migrations/: cli.py  migration_runner.py
backend/migrations/changes/: 20250920214200_add_encrypted_password.py  2025_09_20_000_add_encrypted_password copy.py  2025_09_26_000_add_autolineup.py  2025_09_26_001_add_task_table.py  2025_10_11_000_add_matches_table.py  2025_10_15_000_add_autolineup_timestamp.py
backend/src/hmtracker/: admin.py  constants.py
backend/src/hmtracker/api/: admin_login.py  models.py  server.py
backend/src/hmtracker/api/routers/: admin.py  myteam.py  players.py  user.py
backend/src/hmtracker/common/: constants.py  exceptions.py
backend/src/hmtracker/database/: base.py  creation.py  database.py  migration.py  models.py  repository.py
backend/src/hmtracker/loader/: main.py
backend/src/hmtracker/loader/matches/: importer.py  (+1 more)
backend/src/hmtracker/parser/: hmparser.py
backend/src/hmtracker/services/: admin.py  autolineup.py  check_user.py  encryption.py  team_value.py
backend/src/tests/: __init__.py
backend/src/tests/integration/: loaderItest.py
backend/src/tests/resources/: main_page_arcade.html
backend/tests/integration/: loaderITest.py
(+132 files in other folders)
