[project]
name = "hmtracker"
version = "0.1.0"
description = "Backend for hmtracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "beautifulsoup4==4.12.3",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.11",
    "fastapi-cli==0.0.7",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "rich-toolkit==0.13.2",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.35",
    "starlette==0.46.0",
    "typer==0.15.2",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
    "uvicorn==0.34.0",
    "watchfiles==1.0.4",
    "websockets==15.0.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/hmtracker","src/test"]

[dependency-groups]
dev = []

